# GiggleCode

./: .gitignore  Compress.cabal  GiggleCode.cabal  LICENSE  README.md  output.txt  stack.yaml
app/: Main.hs
src/: B.hs  BuildGrammar.hs  ByteString.hs  Glif.hs  Grammar.hs  GrammarToList.hs  Lib.hs  PadicEncode.hs  Symbol.hs  Tokenize.hs  Utils.hs
test/: BuildGrammar.hs  BuildGrammarSpec.hs  BuildGrammarTest.hs  Grammar.hs  GrammarSpec.hs  GrammarTest.hs  GrammarToList.hs  GrammarToListSpec.hs  Helpers.hs  Lib.hs  LibSpec.hs  PadicEncodeSpec.hs  Spec.hs  SymbolSpec.hs  T.hs  TestUtils.hs  TestUtilsSpec.hs
