name:                Compress
version:             0.1.0.0
synopsis:            Initial project template from stack, using test-framework with QuickCheck
description:         Please see README.md
homepage:            http://github.com/Nolrai/Compress#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw@gmail.com
copyright:            2015 Chris A. Upshaw
category:            Compression
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , vector
                     , finite-typelits
                     , multiset
  default-language:    Haskell2010

executable Compress-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Compress
  default-language:    Haskell2010

test-suite Compress-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Compress
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Nolrai/Compress
