name:                GiggleCode
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/Nolrai/GiggleCode#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw@gmail.com
copyright:           2016 Christopher A. Upshaw
category:            Compression
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BuildGrammar
                     , Grammar
                     , GrammarToList
                     , PadicEncode
                     , Symbol

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , vector

  other-modules:       B
                     , T

  default-language:    Haskell2010

executable GiggleCode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , turtle
                     , bytestring
                     , text
                     , GiggleCode
  default-language:    Haskell2010

test-suite GiggleCode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base
                     , bytestring
                     , text
                     , vector
                     , GiggleCode
                     , hspec
                     , QuickCheck
                     , deepseq

  other-modules:       B
                     , BuildGrammarSpec
                     , GrammarSpec
                     , GrammarToListSpec
                     , LibSpec
                     , PadicEncodeSpec
                     , SymbolSpec
                     , T
                     , TestUtils

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2 -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Nolrai/GiggleCode
